--- a/room.html
+++ b/room.html
@@ -18,7 +18,7 @@
             </button>
             <a href="lobby.html"/>
                 <h3 id="logo">
-                    <span>Chatapp</span>
+                    <span>CHATBOX</span>
                 </h3>
             </a>
        </div>
