--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="lobby.html"/>
                 <h3 id="logo">
                     <!-- <img src="./images/logo.png" alt="Site Logo"> -->
-                    <span>Chatapp</span>
+                    <span>Chatbox</span>
                 </h3>
             </a>
        </div>
@@ -36,7 +36,7 @@
         
         <div id="form__container">
              <div id="form__container__header">
-                 <p>Create or Join Room</p>
+                 <p>Chatbox by Parth Sadaria</p>
              </div>
  
  
