--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Room</title>
+    <title>ChatBox</title>
+    <link rel="icon" type="image/x-icon" href="https://www.flaticon.com/free-icons/chat-bubbles" title="chat bubbles icons">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles/lobby.css'>
